--- a/web/styles.css
+++ b/web/styles.css
@@ -28,3 +28,12 @@ button#reset {
   right: 16px;
   font-size: 16px;
 }
+
+/* TweakPane */
+#tweak-pane {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 20px;
+  /* optional, for spacing from edges */
+}
