--- a/web/styles.css
+++ b/web/styles.css
@@ -21,11 +21,12 @@ button#reset {
   cursor: pointer;
 }
 
-#version {
-  color: #dcdcdc;
+.version-container {
   position: absolute;
-  bottom: 12px;
-  right: 16px;
+  bottom: 0;
+  right: 0;
+  margin: 20px;
+  color: #dcdcdc;
   font-size: 16px;
 }
 
