--- a/web/styles.css
+++ b/web/styles.css
@@ -3,6 +3,10 @@ body {
   height: 100vh;
 }
 
+a:visited {
+  color: inherit;
+}
+
 #app {
   height: 100%;
 }
@@ -20,6 +24,10 @@ body {
   margin: 20px;
   color: #dcdcdc;
   font-size: 16px;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 /* Tweakpane */
