feat: set font-family for web

--- a/web/styles.css
+++ b/web/styles.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   height: 100vh;
+
+  font-family: "Roboto Mono", "Source Code Pro", "Menlo", Courier, monospace;
 }
 
 a:visited {
